<resources>
    <string name="app_name">TLanguage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_group_language">GroupLanguageActivity</string>
    <string name="exercise">Exercise</string>
    <string name="hard_word">Hard Word</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="tab_text_1">Listening</string>
    <string name="tab_text_2">Choosing</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="listening_setting_header">Listening Setting</string>
    <string name="choosing_header">Choosing Setting</string>

    <!--    Listening Preferences-->

    <string name="repeat_title">Repeat repeat words exercise</string>
    <string name="swap_words_title">Swap words when exercise</string>

    <!--    Choosing Preference-->
    <string name="auto_speak_words_title">Repeat words when exercise</string>
</resources>